RESOLVED FIXED259511
WebKit fails to stop discovering text manipulation items when subframes are observed
https://bugs.webkit.org/show_bug.cgi?id=259511
Summary WebKit fails to stop discovering text manipulation items when subframes are o...
Ryosuke Niwa
Reported 2023-07-25 17:10:09 PDT
When includeSubframes is set to true, WebKit never stops observing new content even when the main frame navigates.
Attachments
Ryosuke Niwa
Comment 1 2023-07-25 17:16:04 PDT
EWS
Comment 2 2023-07-25 18:49:45 PDT
Committed 266308@main (e2372fbf8b4b): <https://commits.webkit.org/266308@main> Reviewed commits have been landed. Closing PR #16090 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-07-25 18:50:18 PDT
Note You need to log in before you can comment on or make changes to this bug.