WebKit fails to stop discovering text manipulation items when subframes are observed https://bugs.webkit.org/show_bug.cgi?id=259511

Reviewed by Wenson Hsieh.

The bug was caused by didCommitLoad always starting text manipulation even if it was
a navigation for the main frame. Stop observing text for manipulation in this case.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didCommitLoad):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/266308@main